# machine-learning-samples

./: .gitignore  README.md
LCM_Draw/: Dockerfile  app.py  docker-compose.yml
NLLB/: README.md  pyproject.toml
NLLB/src/: nllb.py
azure-text-to-speech/: README.md  pyproject.toml  ssml.xml
azure-text-to-speech/src/: main.py  speak.py
demucs-sample/: .gitignore  Dockerfile  app.py  docker-compose.yml  make_data.py  requirements.txt
falcon/: README.md  pyproject.toml
falcon/src/: falcon.py  falcon_with_m2m.py  m2m.py
faster-whisper-sample/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
faster-whisper-sample/src/: main.py
gpt-neox-20B/: README.md  pyproject.toml
gpt-neox-20B/src/: m2m.py  neox.py  neox_with_m2m.py
gpu-modal-sample/: get_started.py
jupyterlab/: .gitignore  Dockerfile  LLaMA-Pro-8B.ipynb  autoawq-elyza-calib-ja.ipynb  autoawq-quantization-llama2.ipynb  autoawq-quantization-stockmark.ipynb  code-llama-instruct-7b.ipynb  docker-compose.yml  dreamgaussian_colab_gradio.ipynb  elyza-13b.ipynb  elyza.ipynb  guidance.ipynb  i2v_gen.ipynb  insanely-fast-whisper.ipynb  llama-2-128k.ipynb  llama-2-13b-chat.ipynb  llama2-64k.ipynb  openchat-3.5-awq.ipynb  pfnet-plamo.ipynb  phi-2-dpo-GPTQ.ipynb  powerinfer.ipynb  sd-video-sampling.ipynb  sdxl-turbo.ipynb  stable-fast.ipynb  streamdiffusion.ipynb  swallow-awq.ipynb  swallow.ipynb  transformers-autogptq.ipynb  turing-heron-chat.ipynb  valle-x.ipynb  zepher-7b.ipynb
koboldcpp/: Dockerfile  docker-compose.yml
langchain_vicuna/: Dockerfile  docker-compose.yml  main.ipynb
ore-tweets-lora/: .gitignore  README.md  finetune.py  inference.py  pre_format.py  pyproject.toml
ore-tweets-lora/src/ore_tweets_lora/: __init__.py
reazonspeech-sample/: README.md  pyproject.toml
reazonspeech-sample/src/reazonspeech_sample/: __init__.py
rinna-gpt-neox/: .gitignore  README.md  ppo.csv  ppo_ct2.csv  pyproject.toml
rinna-gpt-neox-4b-minigpt4/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
rinna-gpt-neox-4b-minigpt4/notebook/: 8k.ipynb  minigpt-4.ipynb
rinna-gpt-neox/src/: main.py  ppo.py  ppo_ct2.py  sft_v2.py
stabilityai-jp-lm-7b/: Dockerfile  ct2.ipynb  main.py  requirements.txt
vllm/: Dockerfile  docker-compose.yml  test-awq.ipynb  xwin-awq-ja.ipynb  xwin-lm.ipynb
whisper-diarization-with-nvidia-nemo/: Dockerfile  README.md  docker-compose.yml
whisper-sample/: README.md  pyproject.toml
whisper-sample/src/: main.py
whisper-speaker-diarization-space/: .gitignore  Dockerfile  README.md  app.py  divide_audio_sources.py  docker-compose.yml  pydub_silence.py  requirements.txt  whisper.py  youtube_download.py
whisper-speaker-diarization-space/notebook/: voice_embedding_by_rinna_jp_hubert.ipynb
