[project]
name = "NLLB"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Kazuhiro Homma", email = "kazu.homma@gmail.com" }
]
dependencies = [
    "ctranslate2~=3.15.1",
    "torch~=2.0.1",
    "transformers~=4.30.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.sources]
name = "pytorch"
url = "https://download.pytorch.org/whl"
type = "find-links"

[tool.rye.scripts]
main = "python src/main.py"
