[project]
name = "faster-whisper-sample"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Kazuhiro Homma", email = "kazu.homma@gmail.com" }
]
dependencies = ["faster_whisper~=0.6.0", "yt-dlp~=2023.3.4"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
main = "python src/main.py"
