[project]
name = "reazonspeech-sample"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Kazuhiro Homma", email = "kazu.homma@gmail.com" }
]
dependencies = ["wheel~=0.40.0", "torch==1.12.1", "reazonspeech @ git+https://github.com/reazon-research/reazonspeech.git"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
# excluded-dependencies = ["nvidia-cublas-cu11", "nvidia-cuda-cupti-cu11", "nvidia-cuda-nvrtc-cu11", "nvidia-cuda-runtime-cu11", "nvidia-cudnn-cu11", "nvidia-cufft-cu11", "nvidia-curand-cu11", "nvidia-cusolver-cu11", "nvidia-cusparse-cu11", "nvidia-nccl-cu11", "nvidia-nvtx-cu11"]

[tool.hatch.metadata]
allow-direct-references = true

# [[tool.rye.sources]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cpu"
# type = "find-links"
